[gd_scene load_steps=16 format=3 uid="uid://cgy8ln8ntprhx"]

[ext_resource type="PackedScene" uid="uid://cioe5xv1bdkqv" path="res://assets/mixamo_base_03_01.glb" id="1_2m5i6"]
[ext_resource type="Script" path="res://scripts/classes/class_ActorModel.gd" id="2_okya6"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hlx8f"]
animation = &"sprint"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ngwga"]
animation = &"sprint"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sla7l"]
animation = &"sprint"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dwfqu"]
animation = &"sprint"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tnvro"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_6nnuh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_hlx8f")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ngwga")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_sla7l")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_dwfqu")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_tnvro")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_11dk6"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fb2ge"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_csv6u"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6ahe2"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xthgb"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0s7e1"]
blend_point_0/node = SubResource("AnimationNodeAnimation_11dk6")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_fb2ge")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_csv6u")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_6ahe2")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_xthgb")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_iey8m"]
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_6nnuh")
nodes/BlendSpace2D/position = Vector2(780, 140)
nodes/output/position = Vector2(1140, 100)
nodes/run/node = SubResource("AnimationNodeBlendSpace2D_0s7e1")
nodes/run/position = Vector2(620, 60)

[node name="mixamo_base_03_01" instance=ExtResource("1_2m5i6")]
script = ExtResource("2_okya6")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(4.70752, 2.72568, -92.2008)
bones/0/rotation = Quaternion(-0.70388, -0.00837403, -0.00208391, 0.710266)
bones/1/rotation = Quaternion(-0.0248583, 0.0226637, -0.0058916, 0.999417)
bones/2/rotation = Quaternion(0.0120483, 0.0125354, -0.0042103, 0.99984)
bones/3/rotation = Quaternion(0.0691442, 0.0126989, -0.00459912, 0.997515)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(0.00233719, 0.00363991, -0.0252645, 0.999672)
bones/5/rotation = Quaternion(-0.0306213, -0.00888994, 0.0187839, 0.999315)
bones/7/rotation = Quaternion(-0.558942, -0.459426, 0.569589, -0.389973)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.461439, 0.20593, 0.13025, 0.853054)
bones/9/rotation = Quaternion(7.0429e-07, 1.68698e-08, 0.0871346, 0.996197)
bones/10/rotation = Quaternion(0.124968, 0.0427604, -0.0341106, 0.990652)
bones/11/rotation = Quaternion(0.169477, 0.00116769, 0.188886, 0.967263)
bones/12/rotation = Quaternion(-0.0521495, 0.0237393, -0.143921, 0.987929)
bones/13/position = Vector3(-5.18561e-06, 4.38212, -2.12128e-05)
bones/13/rotation = Quaternion(-0.150618, 0.126467, 0.0782769, 0.97734)
bones/14/position = Vector3(-5.2956e-06, 3.45909, -2.03853e-06)
bones/14/rotation = Quaternion(0.00914624, 0.125638, 0.0720726, 0.989412)
bones/15/rotation = Quaternion(0.191898, -0.00585877, 0.000405481, 0.981397)
bones/16/rotation = Quaternion(0.130166, -8.23744e-07, -0.0133454, 0.991402)
bones/17/rotation = Quaternion(0.130168, -2.10962e-07, -0.0133391, 0.991402)
bones/18/position = Vector3(-2.69357e-06, 3.078, -2.79701e-06)
bones/19/rotation = Quaternion(0.259055, -0.00526115, -0.0448607, 0.964806)
bones/20/rotation = Quaternion(0.103178, -1.13444e-07, -0.0105732, 0.994607)
bones/21/rotation = Quaternion(0.120429, -9.16762e-08, -0.0123411, 0.992645)
bones/22/position = Vector3(-2.59035e-05, 3.68019, -4.40483e-06)
bones/22/rotation = Quaternion(-1.15069e-06, 0.00457938, -0.000654139, 0.999989)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(0.259359, 0.000253084, -0.0652506, 0.963574)
bones/24/position = Vector3(3.01185e-06, 3.60119, -1.39883e-06)
bones/24/rotation = Quaternion(0.166952, -1.40407e-06, -0.017117, 0.985816)
bones/25/position = Vector3(-2.64407e-06, 3.30732, -8.41057e-06)
bones/25/rotation = Quaternion(0.184015, 7.11003e-08, -0.018857, 0.982743)
bones/26/position = Vector3(-1.94375e-05, 3.66012, 1.01444e-05)
bones/27/rotation = Quaternion(0.301065, -0.00732249, -0.0451556, 0.952506)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(-4.30599e-06, 4.13666, -4.30156e-06)
bones/28/rotation = Quaternion(0.149565, -5.56722e-05, -0.0156915, 0.988627)
bones/28/scale = Vector3(1, 1, 1)
bones/29/position = Vector3(3.52639e-06, 2.59483, 4.97628e-07)
bones/29/rotation = Quaternion(0.149571, 3.50295e-05, -0.0150993, 0.988636)
bones/30/position = Vector3(9.3173e-07, 2.92387, 2.96502e-06)
bones/30/rotation = Quaternion(-2.85994e-06, 0.00409959, -0.000575381, 0.999991)
bones/31/rotation = Quaternion(0.550267, -0.467532, 0.567796, 0.395256)
bones/32/position = Vector3(-1.65261e-06, 12.9223, 2.33148e-06)
bones/32/rotation = Quaternion(0.367721, -0.194215, -0.288826, 0.862346)
bones/33/rotation = Quaternion(1.46154e-07, 6.80584e-08, -0.177936, 0.984042)
bones/34/rotation = Quaternion(0.00253202, -0.0543212, -0.110896, 0.992343)
bones/35/rotation = Quaternion(0.23937, -0.0470723, -0.172892, 0.954251)
bones/36/position = Vector3(7.33137e-06, 4.74495, -1.51366e-05)
bones/36/rotation = Quaternion(-0.0758124, -0.0141266, 0.16512, 0.983254)
bones/37/rotation = Quaternion(-0.151638, 0.0738371, -0.0442109, 0.984682)
bones/38/rotation = Quaternion(0.00923232, -0.127131, -0.0723282, 0.989202)
bones/39/position = Vector3(2.82204, 12.2666, 0.231839)
bones/39/rotation = Quaternion(0.167535, 0.0126803, -0.035275, 0.985153)
bones/40/rotation = Quaternion(0.205338, 1.0405e-06, 0.0167312, 0.978548)
bones/41/rotation = Quaternion(0.0910218, 3.48385e-08, 0.00741495, 0.995821)
bones/42/position = Vector3(1.14909e-06, 3.07799, -5.22756e-06)
bones/42/rotation = Quaternion(-7.25752e-05, -0.00670925, 0.00137472, 0.999977)
bones/42/scale = Vector3(1, 1, 1)
bones/43/rotation = Quaternion(0.170331, 0.00772631, 0.00578088, 0.98534)
bones/44/rotation = Quaternion(0.301796, 2.76418e-07, 0.024585, 0.953056)
bones/45/rotation = Quaternion(0.176803, 1.36014e-07, 0.0144028, 0.984141)
bones/46/position = Vector3(2.50074e-05, 3.6802, -2.83734e-06)
bones/46/rotation = Quaternion(-5.08274e-05, -0.00669529, -0.00170832, 0.999976)
bones/47/position = Vector3(-2.21663, 12.147, -0.00998907)
bones/47/rotation = Quaternion(0.202227, 0.00596292, 0.0246548, 0.97901)
bones/48/rotation = Quaternion(0.401727, 3.41836e-06, 0.0327331, 0.915174)
bones/49/rotation = Quaternion(0.200213, 2.89384e-07, 0.01631, 0.979617)
bones/50/rotation = Quaternion(-6.06535e-05, -0.00761335, -0.000300362, 0.999971)
bones/51/position = Vector3(-4.72583, 10.9082, 0.226145)
bones/51/rotation = Quaternion(0.242845, 0.00918112, 0.0283881, 0.969606)
bones/52/rotation = Quaternion(0.247645, 2.86163e-06, 0.0201838, 0.968641)
bones/53/rotation = Quaternion(0.138874, -1.47136e-06, 0.0113025, 0.990246)
bones/54/position = Vector3(3.4848e-06, 2.92387, 4.1569e-06)
bones/54/rotation = Quaternion(-8.30174e-05, -0.00849883, 0.00220619, 0.999961)
bones/54/scale = Vector3(1, 1, 1)
bones/55/rotation = Quaternion(0.0529434, 0.306011, 0.950554, -0.000968021)
bones/55/scale = Vector3(1, 1, 1)
bones/56/rotation = Quaternion(-0.342634, 0.0337713, -0.0327963, 0.938289)
bones/57/rotation = Quaternion(0.552851, 0.0355071, 0.0621691, 0.830199)
bones/57/scale = Vector3(1, 1, 1)
bones/58/rotation = Quaternion(0.288171, -0.0322894, -0.0142299, 0.956928)
bones/60/rotation = Quaternion(-0.110375, -0.00411857, 0.992403, 0.0541907)
bones/60/scale = Vector3(1, 1, 1)
bones/61/rotation = Quaternion(-0.488608, -0.0268008, -0.0422341, 0.871068)
bones/62/rotation = Quaternion(0.417086, 0.0384375, 0.0640129, 0.905795)
bones/63/rotation = Quaternion(0.425846, 0.0528539, 0.0159406, 0.90311)
bones/63/scale = Vector3(1, 1, 1)
bones/64/rotation = Quaternion(-8.44739e-09, 1.30531e-08, -2.55386e-09, 1)

[node name="AnimationPlayer" parent="." index="1"]
speed_scale = 1.3

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeBlendTree_iey8m")
anim_player = NodePath("../AnimationPlayer")
parameters/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/run/blend_position = Vector2(0.990072, 0.0084033)

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
